- Modify OneMinuteCommandBuilder : now integrate with models - Modify height for drawtext for cover text and category text

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="string_kisah">Kisah</string>
     <string name="string_aha">Aha!</string>
     <string name="string_politik">Politik</string>
+    <string name="image">image</string>
+    <string name="_1menit">1MENIT</string>
 </resources>
