--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,13 @@
     <string name="cancel">Cancel</string>
     <string name="enter_passcode">Enter PassCode</string>
     <string name="publish_string">Sit back and relax for a few minutes while we\'re publishing the slideshow...</string>
+
+
+    <string name="awed">All We Ever Do</string>
+    <string name="ca">Chasing Anonymous</string>
+    <string name="hiasom">Happy Is A State Of Mind</string>
+    <string name="jr">Jump Rope</string>
+    <string name="jb">Just Breath</string>
+    <string name="lil">Lost In Love</string>
+    <string name="tms">Too Much Sugar</string>
 </resources>
