- Added resources for ic launcher using adaptive icons - Added command builder for generating audio

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DemoFFMPEG</string>
+    <string name="app_name">OVC</string>
     <string name="string_inspiratif">Inspiratif</string>
     <string name="string_kelakuan">Kelakuan</string>
     <string name="string_ohgitu">Oh Gitu!</string>
